--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Rachel Green</title>
   </head>
   <body>
+    <!-- NAVBAR -->
+
     <div class="box"></div>
     <div class="navbar">
       <div class="nav-items">HOME</div>
@@ -16,6 +18,9 @@
       <div class="nav-items">HOBBIES</div>
       <div class="nav-items">CONTACT</div>
     </div>
+
+    <!-- INTRODUCTION -->
+
     <div class="intro-cont">
       <div class="intro-text">
         <div class="intro-heading">Rachel Green</div>
@@ -35,11 +40,20 @@
         <div class="connect-btn">LET'S TALK!</div>
       </div>
       <div class="profile-pic">
-        <img src="./assets/profile-pic.png" alt="profile-pic" />
+        <img
+          class="prof-img"
+          src="./assets/profile-pic.png"
+          alt="profile-pic"
+        />
       </div>
     </div>
 
+    <!-- EDUCATION -->
+
     <div class="education">
+      <div class="pattern-bg">
+        <img class="bg-pic" src="./assets/bg.png" alt="" />
+      </div>
       <div class="ed-text">My Main Hustle</div>
       <div class="ed-details">
         <div class="detail">
@@ -60,5 +74,7 @@
         </div>
       </div>
     </div>
+
+    <!-- OUR WORK -->
   </body>
 </html>
