--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
     <!-- NAVBAR -->
 
-    <div class="box"></div>
-    <div class="navbar">
-      <div class="nav-items">HOME</div>
-      <div class="nav-items">EDUCATION</div>
-      <div class="nav-items">ACHIEVEMENTS</div>
-      <div class="nav-items">HOBBIES</div>
-      <div class="nav-items">CONTACT</div>
-    </div>
+    <header>
+      <div class="box"></div>
+      <div class="navbar">
+        <div class="nav-items">HOME</div>
+        <div class="nav-items">EDUCATION</div>
+        <div class="nav-items">ACHIEVEMENTS</div>
+        <div class="nav-items">HOBBIES</div>
+        <div class="nav-items">CONTACT</div>
+      </div>
+    </header>
 
     <!-- INTRODUCTION -->
 
@@ -75,6 +77,169 @@
       </div>
     </div>
 
-    <!-- OUR WORK -->
+    <!-- MY WORK -->
+
+    <div class="work-cont">
+      <div class="work-head">My Work</div>
+      <div class="work-text">
+        “I love coding & ever since I took up ProGrad Junior, I’ve built some
+        cool projects. I’ve also picked up HTML, CSS & JavaScript”
+      </div>
+      <div class="project-cont">
+        <div class="project">
+          <div class="mini-box"></div>
+          <div class="proj-img">
+            <img class="proj-pic" src="./assets/recipe.png" alt="" />
+          </div>
+          <div class="proj-name">Recipe Web Page</div>
+          <div class="proj-desc">
+            I built a Dalgona Coffee Recipe page using HTML & CSS.
+          </div>
+          <div class="proj-btn">SEE PROJECT</div>
+        </div>
+        <div class="project">
+          <div class="mini-box"></div>
+          <div class="proj-img">
+            <img class="proj-pic" src="./assets/emoji.png" alt="emoji" />
+          </div>
+          <div class="proj-name">My Fav Emojis</div>
+          <div class="proj-desc">
+            I created my favorite emojis & cartoons using CSS only.
+          </div>
+          <div class="proj-btn">SEE PROJECT</div>
+        </div>
+        <div class="project">
+          <div class="mini-box"></div>
+          <div class="proj-img">
+            <img
+              class="proj-pic"
+              src="./assets/guess-the-number.png"
+              alt="guess-the-number"
+            />
+          </div>
+          <div class="proj-name">Guess the Number</div>
+          <div class="proj-desc">
+            I built guess the number game using JavaScript.
+          </div>
+          <div class="proj-btn">SEE PROJECT</div>
+        </div>
+        <div class="project">
+          <div class="mini-box"></div>
+          <div class="proj-img">
+            <img
+              class="proj-pic"
+              src="./assets/rock-paper-scissors.png"
+              alt="rock-paper-scissors"
+            />
+          </div>
+          <div class="proj-name">Rock Paper Scissors</div>
+          <div class="proj-desc">
+            I made a virtual rock paper scissors game using JS.
+          </div>
+          <div class="proj-btn">SEE PROJECT</div>
+        </div>
+        <div class="project">
+          <div class="mini-box"></div>
+          <div class="proj-img">
+            <img class="proj-pic" src="./assets/pokemon.png" alt="poekmon" />
+          </div>
+          <div class="proj-name">Pokemon Game</div>
+          <div class="proj-desc">
+            I built the Pokemon based game using HTML, CSS & JS.
+          </div>
+          <div class="proj-btn">SEE PROJECT</div>
+        </div>
+        <div class="project">
+          <div class="mini-box"></div>
+          <div class="proj-img">
+            <img
+              class="proj-pic"
+              src="./assets/e-birthday-card.png"
+              alt="e-birthday"
+            />
+          </div>
+          <div class="proj-name">E-birthday Card</div>
+          <div class="proj-desc">
+            I’ve built my own e-birthday card using JS.
+          </div>
+          <div class="proj-btn">SEE PROJECT</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ACHIEVEMENTS -->
+
+    <div class="ach-cont">
+      <div class="achievement-list">
+        <div class="achievement">
+          <div class="ach-text">Topped my class with a CPGA of 9.2.</div>
+        </div>
+        <div class="achievement">
+          <div class="ach-text">
+            Was awarded ‘Best Performer of the Batch 2018’ for consistent
+            performance in academic for 3 consequetive years.
+          </div>
+        </div>
+        <div class="achievement">
+          <div class="ach-text">
+            Currently, taking up “ProGrad Junior Certification Program”. Links
+            to some of my projects - https://github.io/rachel/game1
+          </div>
+        </div>
+        <div class="achievement">
+          <div class="ach-text">
+            Vice Captain, Sports Club of Sunbeam SSC. Bagged several prizes in
+            Running (100 m), Dodge ball, Archery, Regional Badminton tornaments
+            etc.
+          </div>
+        </div>
+        <div class="achievement">
+          <div class="ach-text">
+            Member of #include - A global coding club for passionate coders
+          </div>
+        </div>
+      </div>
+      <div class="ach-header">I'm Proud Of</div>
+    </div>
+
+    <!-- HOBBIES -->
+
+    <div class="hobbies-cont">
+      <div class="hob-text">
+        <div class="hob-header">My Side Hustle</div>
+        <div class="hob-para">
+          When I’m free, you’ll find me doing one of these. Honestly, I hate to
+          laze around!
+        </div>
+      </div>
+      <div class="hob-images">
+        <div class="cont1">
+          <img class="guitar" src="./assets/guitar.png" alt="guitar" />
+          <img class="painting" src="./assets/painting.png" alt="painting" />
+        </div>
+        <div class="cont2">
+          <img class="friends" src="./assets/friends.png" alt="friends" />
+          <img class="badminton" src="./assets/badminton.png" alt="badminton" />
+          <img class="reading" src="./assets/reading.png" alt="reading" />
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+
+    <footer>
+      <div class="contact-det">
+        <div class="contact-head">Contact</div>
+        <a href="mailto:rachel.green@gmail.com" class="mail"
+          >rachel.green@gmail.com</a
+        >
+        <div class="logos">
+          <img class="logo" src="./assets/instagram.png" alt="instagram" />
+          <img class="logo" src="./assets/youtube.png" alt="youtube" />
+          <img class="logo" src="./assets/facebook.png" alt="facebook" />
+        </div>
+      </div>
+      <div class="rights">All rights reserved.</div>
+    </footer>
   </body>
 </html>
